<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.AddContact">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/name"
                android:background="@color/light_gray"
                android:inputType="text"/>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:hint="@string/phone"
                    android:background="@color/light_gray"
                    android:inputType="phone"/>
                <Button
                    android:id="@+id/callPhone"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:text="@string/call"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/address"
                android:background="@color/light_gray"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/notes"
                android:background="@color/light_gray"
                android:inputType="text"/>
            <fragment
                android:layout_marginTop="15dp"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="45dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/update"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>